--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,78 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+}
+
 .App {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.app-heading {
+  margin-bottom: 30px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.stocks-list {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.stock-item {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin: 0 auto;
+  line-height: 1;
+  padding: 20px 20px;
+  background-color: #bee3f8;
+  border-radius: 8px;
+  box-shadow: 2px 10px 20px 0px rgba(0, 0, 0, 0.1);
 }
 
-.App-link {
-  color: #61dafb;
+.stock-amount {
+  font-size: 2rem;
+  margin-bottom: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.stock-title {
+  margin-bottom: 10px;
+  font-size: 1.125rem;
+  font-weight: 600;
+}
+
+.stock-code {
+  color: #2c5282;
+  font-size: 0.75rem;
+  font-weight: 700;
+  padding: 2px 4px;
+  border-radius: 4px;
+  margin-bottom: 15px;
+}
+
+.stock-btn-wrapper {
+  display: flex;
+  gap: 10px;
+  width: 100%;
+}
+
+.stock-btn {
+  font-size: 1rem;
+  padding: 5px 20px;
+  border-radius: 20px;
+  border: none;
+  box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.1);
+}
+
+.stock-btn-buy {
+  color: #fff;
+  background-color: #2c7a7b;
+}
+
+.stock-btn-sell {
+  color: #2d3748;
+  background-color: #edf2f7;
 }
